--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -40,7 +40,7 @@
 
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.collection == 'blogs' %}
+        {% elsif post.collection == 'personal_blogs' %}
           <p> {{ post.date | default: "1900-01-01" | date: "%Y-%m-%d" }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
